Fri Nov 26 02:21:56 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Fix .so-entries for script manpages

Thu Nov 25 23:59:24 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Correct location of documentation in debian/dpkg-doc.doc-base

Thu Nov 25 04:55:18 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Correct name of source tarball in debian/rules

Thu Nov 25 03:45:23 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Merge the new buildsystem from the wta_build branch. If you want
    the old buildsystem check the last-of-automake tag

Fri Nov 19 15:04:10 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * `n' is also searchagain in dselect now
  * Do searchagain if an empty searchstring is entered

Thu Nov 18 10:27:35 EST 1999 Ben Collins <bcollins@debian.org>

  * utils/start-stop-daemon.c: Added ability for user.group arg to
    --chuid. Also, always call initgroups() when using --chuid.
  * utils/start-stop-daemon.8: Document above change, also add note to the
    --make-pidfile option concerning its problem with daemons that fork

Fri Nov 12 21:21:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Rename japanses translation to just jp

Thu Nov 11 20:14:02 EST 1999 Ben Collins <bcollins@debian.org>

  * lib/tarfn.c: add braces around if to fix compiler warning

Fri Nov 12 01:47:24 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Correct names for build-depency names according to Bug# 49792
  * .. and for dpkg-source.pl as well

Mon Nov  8 17:45:50 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Add support for enhances to dpkg and dselect. dselect doesn't
    take any action on it yet though

Tue Nov  2 20:19:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Fix some language mixups: our Polish translation was actually
    Czech, and we somehow lost the real Polish text..

Mon Nov  1 23:25:32 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Add partial Russian translation from Michael Sobolev <mss@transas.com>
