@@ -156,8 +156,6 @@ LOCALSTATEDIR=`eval echo $localstatedir`
 AC_DEFINE_UNQUOTED(LLIBDIR, "$LLIBDIR")
 AC_DEFINE_UNQUOTED(LOCALSTATEDIR, "$LOCALSTATEDIR")
 
-AC_CONFIG_SUBDIRS(utils)
-
 AC_OUTPUT(
 Makefile.conf
 Makefile
@@ -172,4 +170,5 @@ scripts/Makefile
 main/Makefile
 dselect/Makefile
 methods/Makefile
+utils/Makefile
 po/Makefile.in)
