@@ -1,3 +1,9 @@
+Fri Nov 26 18:09:17 EST 1999 Ben Collins <bcollins@debian.org>
+
+  * configure.in: generate utils/Makefile
+  * utils/configure.in: removed so top level configure will take over this
+    subdir
+
 Fri Nov 26 02:21:56 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Fix .so-entries for script manpages
